contrast fix

--- a/avBooth/voting-step-directive/voting-step-directive.less
+++ b/avBooth/voting-step-directive/voting-step-directive.less
@@ -37,15 +37,15 @@
     }
 
     .step-number-selected {
-        background: @state-success-text;
+        background: @brand-success;
         color: @av-primary;
     }
 
     .step-number-unselected {
-        color: @state-success-text;
+        color: @brand-success;
         opacity: 50%;
         stroke-opacity: 50%;
-        border: 1px solid @state-success-text;
+        border: 1px solid @brand-success;
     }
 
     .step-number-red {
